<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_app_pic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/app_cover"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_app_pic"
            android:text="Version 1.0"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_about_app"
        android:layout_below="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text_first"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text_second"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:textSize="15dp"/>
        <TextView
            android:layout_marginTop="130dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text_third"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:textSize="15dp"/>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview_about_app"
        android:textSize="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"/>



    <TextView
        android:id="@+id/tv_developed"
        android:layout_below="@+id/tv_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_developed"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_developed"
        android:textColor="@color/colorPrimary"
        android:text="Computer University(Lashio)"
        android:gravity="center"
        android:layout_margin="12dp"/>



</RelativeLayout>