<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.team06.foodbox.CategoriesDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout">

        <ImageView
        android:id="@+id/img_categories"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_catagories_height"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        />

        <TextView
        android:id="@+id/tv_categories_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_categories"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
            android:background="@color/colorPrimary"
            android:paddingRight="15dp"/>

    <ImageView
        android:id="@+id/img_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/img_categories"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_favorite_border_black_24dp" />

    <TextView
        android:id="@+id/tv_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_categories_title"
        android:text="@string/text_ingredients"
        android:textSize="16dp"
        android:padding="@dimen/text_ingredients_padding"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="@dimen/text_ingredients_margin_bottom"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ingredients_height"
        android:id="@+id/linear_ingredient"
        android:orientation="vertical"
        android:layout_below="@+id/relative_layout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_all_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:textSize="15dp"
                android:lineSpacingExtra="6dp"/>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/relative_direction"
            android:orientation="horizontal"
            android:weightSum="2">

        <Button
            android:id="@+id/btn_shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/text_btn_add_shopping_list"
            android:textAllCaps="false"
            android:background="@drawable/button_corner"
            android:layout_marginLeft="@dimen/btn_shopping_list_margin_left"
            android:layout_marginRight="@dimen/btn_shopping_list_margin_right"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:textSize="15dp"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginRight="@dimen/btn_directions_margin_right"
            android:layout_marginLeft="@dimen/btn_directions_margin_left"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:background="@drawable/button_corner"
            android:text="@string/text_btn_direction"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@android:color/white"/>


        </LinearLayout>



</RelativeLayout>
